# fractalrenderer

./: build.zig  build.zig.zon
src/: main.zig
src/c_sources/: CMakeLists.txt  asdsad  main.cpp
src/c_sources/src/: shadow_effect.cpp  shadow_effect.h  stdafx.h  texture_oprations.cpp  texture_oprations.h  ui.cpp  ui.h  ui_button.cpp  ui_button.h  ui_constants.h  ui_progress_bar.cpp  ui_progress_bar.h  ui_text_field.cpp  ui_text_field.h
